tests/cases/compiler-development/artifact/errors/diagnostic-match-duplicate-arm.diagnostic
diagnostic error code=T0001 family=type message="duplicate match arm for enum case 'A'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-duplicate-arm.ari" display="tests/cases/match/errors/match-duplicate-arm.ari" bytes=184
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-duplicate-arm.ari" line=12 column=5 end_line=12 end_column=6 byte_start=116 byte_end=117 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-duplicate-arm.ari:12:5\n    |\n 12 |     A => {\n    |     ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/match/errors/match-duplicate-arm.ari" line=9 column=5 end_line=9 end_column=6 byte_start=83 byte_end=84 message="previous arm for enum case 'A' is here"
  Snippet label=1 text="  --> tests/cases/match/errors/match-duplicate-arm.ari:9:5\n   |\n 9 |     A => {\n   |     ^"
  Note index=0 location=none message="match arms are checked in source order, and the earlier arm already covers this pattern"
  Help index=0 location=none message="remove the duplicate arm or merge its body with the earlier arm"
